finalize ejs files and request routes; create-form HTML

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,15 +34,15 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="/posts" class="nav-link my-2">
+        <a href="/posts-list" class="nav-link my-2">
           <span class="fw-semibold fs-6 text-decoration-none">Posts List</span>
         </a>
       </li>
     </ul>
 
     <!-- Create Book Post Button -->
-    <button type="submit" class="mb-5 btn btn-outline-success mx-auto" style="width: fit-content;">
+    <a href="/new-post" class="mb-5 btn btn-outline-success mx-auto" style="width: fit-content;">
       <span>Add New Book</span>
-    </button>
+    </a>
   </aside>
   <main class="container p-4" style="margin-left: 280px;">
