--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
     <!-- Nav Items List -->
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
-        <a href="/" class="nav-link active my-2" aria-current="page">
+        <a href="/" class="nav-link my-2 active">
           <span class="fw-semibold fs-6">Library</span>
         </a>
       </li>
