Library view responsive; remove posts-list view

--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs') %>
 
-  <section class="">
+  <section class="container my-5">
     <form action="/submit-post" method="POST" class="d-flex flex-column">
 
       <!-- TITLE, SUBTITLE, AUTHORS, & ISBN -->
