--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,11 +33,6 @@
           <span class="fw-semibold fs-6">Library</span>
         </a>
       </li>
-      <li class="nav-item">
-        <a href="/posts-list" class="nav-link my-2">
-          <span class="fw-semibold fs-6 text-decoration-none">Posts List</span>
-        </a>
-      </li>
     </ul>
 
     <!-- Create Book Post Button -->
@@ -45,4 +40,4 @@
       <span>Add New Book</span>
     </a>
   </aside>
-  <main class="container p-4" style="margin-left: 280px;">
+  <main class="flex-grow-1" style="margin-left: 280px;">
