--- a/views/library.ejs
+++ b/views/library.ejs
@@ -1,18 +1,53 @@
 <%- include('partials/header.ejs') %>
+  <% if (books) { %>
+    <div class="album d-flex justify-content-center">
+      <div class="my-1 mx-1 row row-cols-1 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4 g-4">
+        <% books.forEach((book)=> { %>
+          <div class="col d-flex justify-content-center">
+            <a href="/post/<%= book.id %>" class="text-decoration-none">
+              <div class="card h-100" style="height: 400px; width: 300px;">
 
-  <div class="container">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-5">
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
-      <div class="col border border-1">book1</div>
+                <!-- CARD IMAGE -->
+                <div class="card-img-top text-center border border-1 d-flex align-items-center justify-content-center"
+                  style="height: 250px;">
+                  <img src="<%= book.coverurl %>" class="img-fluid mh-100 mw-100 object-fit-contain">
+                </div>
+
+                <!-- CARD TEXT -->
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">
+                    <%= book.title %>: <%= book.subtitle %>
+                  </h5>
+                  <p class="card-subtitle text-body-secondary mb-2">
+                    By <%= book.authors %>
+                  </p>
+                  <!-- TODO Maybe add initial part of post content here -->
+                  <p class="card-text text-truncate d-block">
+                    <%= book.content %>
+                  </p>
+
+                  <!-- CARD STATUS & RATING -->
+                  <div class="mt-auto">
+                    <button
+                      class="btn btn-sm disabled fw-semibold
+                        <%= book.status === 'reading' ? 'btn-outline-primary' : book.status === 'completed' ? 'btn-outline-success' : 'btn-outline-dark' %>">
+                      <%= book.status %>
+                    </button>
+                    <button
+                      class="btn btn-sm disabled fw-semibold
+                      <%= book.rating > 7 ? 'btn-outline-success' : book.rating > 4 ? 'btn-outline-primary' : 'btn-outline-danger' %>">
+                      <%= book.rating %> / 10
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <% }); %>
+      </div>
     </div>
-  </div>
+    <% } else { %>
+      <h4>No books have been added, yet.</h4>
+      <% } %>
 
-  <%- include('partials/footer.ejs') %>
+        <%- include('partials/footer.ejs') %>
