complete editing and deleting post

--- a/views/library.ejs
+++ b/views/library.ejs
@@ -30,7 +30,7 @@
                   <div class="mt-auto">
                     <button
                       class="btn btn-sm disabled fw-semibold
-                        <%= book.status === 'reading' ? 'btn-outline-primary' : book.status === 'completed' ? 'btn-outline-success' : 'btn-outline-dark' %>">
+                        <%= book.status === 'reading' ? 'btn-outline-primary' : book.status === 'completed' ? 'btn-success' : 'btn-outline-dark' %>">
                       <%= book.status.toUpperCase() %>
                     </button>
                     <button
