--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -1,68 +1,89 @@
 <%- include('partials/header.ejs') %>
 
   <section class="container my-5">
-    <form action="/submit-post" method="POST" class="d-flex flex-column">
+    <form action="/submit-post" method="POST" class="d-flex flex-column row-gap-3">
 
       <!-- TITLE, SUBTITLE, AUTHORS, & ISBN -->
-      <label for="title" class="form-label">
-        Book Title
-      </label>
-      <input type="text" name="title" class="form-control" required />
+      <div>
+        <label for="title" class="form-label lead">
+          Book Title
+        </label>
+        <input type="text" name="title" class="form-control" required />
+      </div>
 
-      <label for="subtitle" class="form-label">
-        Book Subtitle
-      </label>
-      <input type="text" name="subtitle" class="form-control" />
+      <div>
+        <label for="subtitle" class="form-label lead">
+          Book Subtitle
+        </label>
+        <input type="text" name="subtitle" class="form-control" />
+      </div>
 
-      <label for="authors" class="form-label">
-        Authors
-      </label>
-      <input type="text" name="authors" class="form-control" />
+      <div>
+        <label for=" authors" class="form-label lead">
+          Authors
+        </label>
+        <input type="text" name="authors" class="form-control" />
+      </div>
 
-      <label for="isbn" class="form-label">
-        ISBN
-      </label>
-      <input type="text" name="isbn" class="form-control" />
+      <div>
+        <label for=" isbn" class="form-label lead">
+          ISBN
+        </label>
+        <input type="text" name="isbn" class="form-control" />
+      </div>
 
       <!-- STATUS : Radio (To Read / In Progress / Completed) -->
-      <span class="form-label">
-        Status
-      </span>
-      <div class="">
-        <input type="radio" name="status" value="to-read" checked />
-        <label for="to-read">To Read</label>
-        <input type="radio" name="status" value="reading" />
-        <label for="to-read">Reading</label>
-        <input type="radio" name="status" value="completed" />
-        <label for="to-read">Completed</label>
+      <div class="d-flex flex-column row-gap-1">
+        <span class="form-label lead">
+          Status
+        </span>
+        <div class="d-flex flex-row column-gap-5">
+          <div>
+            <input type="radio" name="status" value="to-read" checked />
+            <label for="to-read">To Read</label>
+          </div>
+          <div>
+            <input type="radio" name="status" value="reading" />
+            <label for="to-read">Reading</label>
+          </div>
+          <div>
+            <input type="radio" name="status" value="completed" />
+            <label for="to-read">Completed</label>
+          </div>
+        </div>
       </div>
 
       <!-- RATING : 1 ~ 10-->
-      <label for="rating" class="form-label">
-        Rating (1~10)
-      </label>
-      <select name="rating">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-        <option value="10">10</option>
-      </select>
+      <div class="d-flex flex-column row-gap-1">
+        <label for="rating" class="form-label lead">
+          Rating (1~10)
+        </label>
+        <select name="rating">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+        </select>
+      </div>
 
       <!-- CONTENT : TEXT BOX -->
-      <label for="content" class="form-label">
-        Your Notes & Review
-      </label>
-      <textarea type="text" name="content" rows="10" class="form-control"></textarea>
+      <div class="mt-3">
+        <label for="content" class="form-label lead">
+          Your Notes & Review
+        </label>
+        <textarea type="text" name="content" rows="10" class="form-control"></textarea>
+      </div>
 
-      <hr>
 
-      <input type="submit" value="Create">
+      <button type="submit" class="btn btn-outline-primary mt-3">
+        Create
+      </button>
 
     </form>
   </section>
