--- a/views/post.ejs
+++ b/views/post.ejs
@@ -9,7 +9,7 @@
         <div>
           <button
             class="btn btn-sm disabled fw-semibold
-              <%= post.status === 'reading' ? 'btn-outline-primary' : post.status === 'completed' ? 'btn-outline-success' : 'btn-outline-dark' %>">
+              <%= post.status === 'reading' ? 'btn-outline-primary' : post.status === 'completed' ? 'btn-success' : 'btn-outline-dark' %>">
             <%= post.status.toUpperCase() %>
           </button>
           <h1>
@@ -30,22 +30,45 @@
               </em>
               <% } %>
                 <% if (post.status==="completed" ) { %>
-                  <div class="align-items-center">
+                  <div class="align-items-center mt-3">
                     <span class="fw-semibold fs-6">Rating:</span>
                     <button
-                      class="btn btn-sm disabled fw-semibold
+                      class="btn disabled fw-semibold
                       <%= post.rating > 7 ? 'btn-outline-success' : post.rating > 4 ? 'btn-outline-primary' : 'btn-outline-danger' %>">
                       <%= post.rating %> / 10
                     </button>
                   </div>
                   <% } %>
+                    <div class="d-flex flex-row mt-4">
+                      <form action="/edit-post/<%= post.id %>" method="GET">
+                        <button type="submit" class="btn btn-success d-flex align-items-center">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-pencil" viewBox="0 0 16 16">
+                            <path
+                              d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325" />
+                          </svg>
+                          <span class="ms-1">Edit</span>
+                        </button>
+                      </form>
+                      <div class="mx-2"></div>
+                      <form action="/delete/<%= post.id %>" method="POST">
+                        <button type="submit" class="btn btn-danger d-flex align-items-center">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                            <path
+                              d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
+                          </svg>
+                          <span class="ms-1">Delete</span>
+                        </button>
+                      </form>
+                    </div>
         </div>
       </section>
 
       <hr />
 
       <div>
-        <h3 class="lead fs-3">My Notes</h3>
+        <h3 class="lead fs-3 mb-2">My Notes</h3>
         <p>
           <%= post.content %>
         </p>
